--- a/src/style/partials/global.scss
+++ b/src/style/partials/global.scss
@@ -101,6 +101,7 @@ body {
       -webkit-box-shadow: $imgShadow;
       -moz-box-shadow: $imgShadow;
       box-shadow: $imgShadow;
+      cursor: pointer;
     }
   }
 }
