--- a/src/template/articles.html
+++ b/src/template/articles.html
@@ -1,11 +1,12 @@
 <div ng-repeat="article in articles">
   <p class="content__sub-title">{{ article.title }}</p><br>
 
-  <p class="content__text" ng-repeat="paragraph in article.text">{{ paragraph.text }}
+  <p class="content__text" ng-repeat="paragraph in article.text">{{ paragraph.text }}</p>
     <ul class="content__list">
-      <li ng-repeat="paragraphList in paragraph['list']">{{ paragraphList }}</li>
+      <li ng-repeat="paragraphList in paragraph.list">{{ paragraphList }}</li>
     </ul>
-  </p><br>
+
+  <br>
 
   <img class="content__img" ng-if="article.imgUrl && article.imgUrl.length == 1"
        ng-src="{{ articleImgPath }}{{ article.imgUrl[0] }}" alt="img">
